# media-processing-system

@artifact/avc/: Intra_prediction_1102.ppt  h.264(slice).ppt  h.264_1018.ppt
@artifact/mpeg2ts/: tstools-1_11.tgz
@artifact/sdk/AMD_APP_SDK/3.0-0-Beta/samples/opencl/cl/SimpleDX10/: CMakeLists.txt  SimpleDX10.cpp  SimpleDX10.fxo  SimpleDX10.hpp  SimpleDX10VS12.vcxproj
application/dk_media_player/: dk_media_player.vcxproj
application/dk_recorder_server_controller/: dk_mpeg2ts_saver.cpp  dk_mpeg2ts_saver.h  dk_record_server_controller.h  dk_record_server_controller.vcxproj  dk_record_server_controller.vcxproj.filters  dk_record_server_controller_dlg.cpp  dk_record_server_controller_dlg.h  dk_rtmp_receiver.cpp  dk_rtmp_receiver.h  dk_rtsp_receiver.cpp  dk_rtsp_receiver.h  record_server.aps  record_server.rc  resource.h  stdafx.cpp
application/dk_vod_rtsp_server/: dk_vod_rtsp_server.vcxproj  dk_vod_rtsp_server.vcxproj.filters
directshow/baseclasses/: baseclasses.vcxproj
directshow/dk_aac_decode_filter/: dk_aac_decode_filter.cpp  dk_aac_decode_filter.h  dk_aac_decode_filter.vcxproj  dk_aac_decode_filter.vcxproj.filters  dk_aac_decode_filter_properties.cpp
directshow/dk_aac_encode_filter/: dk_aac_encode_filter.cpp  dk_aac_encode_filter.h  dk_aac_encode_filter.rc  dk_aac_encode_filter.vcxproj  setup.cpp
directshow/dk_celt_decode_filter/: dk_celt_decode_filter.aps  dk_celt_decode_filter.cpp  dk_celt_decode_filter.h  dk_celt_decode_filter.rc  dk_celt_decode_filter.vcxproj  resource.h
directshow/dk_celt_encode_filter/: dk_celt_encode_filter.cpp  dk_celt_encode_filter.h  dk_celt_encode_filter.rc  dk_celt_encode_filter.vcxproj  dk_celt_encode_filter_properties.cpp  resource.h
directshow/dk_colorspace_convert_filter/: dk_colorspace_convert_filter.aps  dk_colorspace_convert_filter.cpp  dk_colorspace_convert_filter.h  dk_colorspace_convert_filter.vcxproj  dk_colorspace_convert_filter_properties.cpp  dk_colorspace_convert_filter_properties.h
directshow/dk_dshow_base/: ReadMe.txt  dk_com_initiator.cpp  dk_com_initiator.h  dk_dshow_base.vcxproj  dk_dshow_base.vcxproj.filters  dk_dshow_helper.cpp  dk_dshow_helper.h  dk_dxva2_allocator.cpp  dk_dxva2_sample.h  dk_video_decode_filter.h  dk_video_decode_input_pin.h
dk_aac_decoder/: dk_aac_decoder.vcxproj  dk_aac_decoder.vcxproj.filters
dk_aac_encoder/: dk_aac_encoder.vcxproj  dk_aac_encoder.vcxproj.filters
dk_ac3_decoder/: dk_ac3_decoder.vcxproj
dk_ac3_encoder/: dk_ac3_encoder.vcxproj  dk_ac3_encoder.vcxproj.filters
dk_avc_raw_stream_reader/: dk_avc_raw_stream_reader.vcxproj  dk_avc_raw_stream_reader.vcxproj.filters
dk_base_video/: ReadMe.txt  dk_base_video.vcxproj  dk_base_video.vcxproj.filters
dk_celt_decoder/: dk_celt_decoder.vcxproj  dk_celt_decoder.vcxproj.filters
dk_celt_encoder/: dk_celt_encoder.vcxproj  dk_celt_encoder.vcxproj.filters
dk_colorspace_converter/: dk_colorspace_converter.vcxproj  dk_colorspace_converter.vcxproj.filters
dk_common/: ReadMe.txt  dk_common.vcxproj  dk_common.vcxproj.filters  dk_string_helper.h  dk_submedia_type.h  dk_util.h
dk_cuda_base/: dk_cuda_base.vcxproj  dk_cuda_base.vcxproj.filters
dk_custom_base/: dk_custom_base.vcxproj  dk_custom_base.vcxproj.filters
dk_custom_client/: dk_custom_client.vcxproj
dk_custom_server/: dk_custom_server.vcxproj  dk_custom_server.vcxproj.filters
dk_ddraw_video_renderer/: dk_ddraw_video_renderer.vcxproj  dk_ddraw_video_renderer.vcxproj.filters
dk_device_check/: dk_device_check.vcxproj  dk_device_check.vcxproj.filters
dk_directdraw_renderer/: dk_directdraw_renderer.vcxproj  dk_directdraw_renderer.vcxproj.filters
dk_directsound_renderer/: dk_directsound_renderer.vcxproj  dk_directsound_renderer.vcxproj.filters
dk_ff_decoder/: dk_ff_decoder.vcxproj  dk_ff_decoder.vcxproj.filters
dk_ff_mp3_decoder/: dk_ff_mp3_decoder.vcxproj  dk_ff_mp3_decoder.vcxproj.filters
dk_ff_mpeg2ts_muxer/: dk_ff_mpeg2ts_muxer.vcxproj  dk_ff_mpeg2ts_muxer.vcxproj.filters
dk_ff_video_decoder/: dk_ff_video_decoder.vcxproj  dk_ff_video_decoder.vcxproj.filters
dk_ffmpeg_base/: ReadMe.txt  dk_ffmpeg_base.vcxproj  dk_ffmpeg_base.vcxproj.filters
dk_ims_decoder/: dk_ims_decoder.vcxproj  dk_ims_decoder.vcxproj.filters  ~AutoRecover.dk_ims_decoder.vcxproj
dk_ims_encoder/: dk_ims_encoder.vcxproj  dk_ims_encoder.vcxproj.filters
dk_media_buffering/: dk_media_buffering.vcxproj  dk_media_buffering.vcxproj.filters
dk_media_bufffering/: dk_media_bufffering.vcxproj
dk_media_sdk_decoder/: dk_media_sdk_decoder.vcxproj
dk_media_sdk_encoder/: dk_media_sdk_encoder.vcxproj  dk_media_sdk_encoder.vcxproj.filters
dk_mmwave_renderer/: dk_mmwave_renderer.vcxproj  dk_mmwave_renderer.vcxproj.filters
dk_mp3_decoder/: dk_mp3_decoder.vcxproj  dk_mp3_decoder.vcxproj.filters
dk_mpeg2ts_demuxer/: dk_mpeg2ts_demuxer.vcxproj.filters
dk_mpeg2ts_muxer_test/: dk_mpeg2ts_muxer_test.vcxproj
dk_mpeg2ts_segmenter/: dk_mpeg2ts_segmenter.vcxproj  dk_mpeg2ts_segmenter.vcxproj.filters
dk_msdk_encoder/: dk_msdk_encoder.vcxproj.filters
dk_nvenc_encoder/: dk_nvenc_encoder.vcxproj  dk_nvenc_encoder.vcxproj.filters
dk_ogg_muxer/: dk_ogg_muxer.vcxproj.filters
dk_recorder_server_controller/: ReadMe.txt  dk_ff_decoder.cpp  dk_ff_decoder.h  dk_record_server_controller.cpp  dk_record_server_controller.vcxproj  dk_record_server_controller.vcxproj.filters  dk_record_server_controller_dlg.cpp  dk_record_server_controller_dlg.h  dk_rtsp_receiver.cpp  dk_rtsp_receiver.h  record_server.aps  record_server.rc  resource.h
dk_rtmp_client/: dk_rtmp_client.vcxproj  dk_rtmp_client.vcxproj.filters
dk_rtsp_client/: dk_rtsp_client.vcxproj  dk_rtsp_client.vcxproj.filters
dk_rtsp_server/: dk_rtsp_server.vcxproj  dk_rtsp_server.vcxproj.filters
dk_simd_colorspace_converter/: dk_simd_colorspace_converter.vcxproj
dk_vce_encoder/: dk_vce_encoder.vcxproj  dk_vce_encoder.vcxproj.filters
dk_video_base/: ReadMe.txt  dk_video_base.vcxproj.filters
dk_vod_rtsp_server/: dk_vod_rtsp_server.vcxproj
dk_x264_encoder/: dk_x264_encoder.vcxproj  dk_x264_encoder.vcxproj.filters
(+1315 files in other folders)
